--- a/20250625_fifa.html
+++ b/20250625_fifa.html
@@ -113,37 +113,37 @@
     <div class="group-title">Grupa A</div>
     <table>
       <tr><th>Zawodnik</th><th>Pkt</th><th>Bramki</th></tr>
-      <tr><td>Gracz A1</td><td>6</td><td>5:2</td></tr>
-      <tr><td>Gracz A2</td><td>3</td><td>3:4</td></tr>
-      <tr><td>Gracz A3</td><td>0</td><td>1:3</td></tr>
+      <tr><td>Marcin D</td><td>6</td><td>10:3</td></tr>
+      <tr><td>Piotrek W</td><td>3</td><td>5:5</td></tr>
+      <tr><td>Oliwier D</td><td>0</td><td>4:11</td></tr>
     </table>
-    <div class="match">Gracz A1 3:1 Gracz A2</div>
-    <div class="match">Gracz A1 2:1 Gracz A3</div>
-    <div class="match">Gracz A2 2:0 Gracz A3</div>
+    <div class="match">Piotrek 5:1 Oliwier</div>
+    <div class="match">Piotrek 0:4 Marcin</div>
+    <div class="match">Oliwier 3:6 Marcin</div>
 
     <!-- Grupa B -->
     <div class="group-title">Grupa B</div>
     <table>
       <tr><th>Zawodnik</th><th>Pkt</th><th>Bramki</th></tr>
-      <tr><td>Gracz B1</td><td>4</td><td>4:2</td></tr>
-      <tr><td>Gracz B2</td><td>4</td><td>3:1</td></tr>
-      <tr><td>Gracz B3</td><td>0</td><td>1:5</td></tr>
+      <tr><td>Kuba N</td><td>6</td><td>15:1</td></tr>
+      <tr><td>Filip C</td><td>3</td><td>3:11</td></tr>
+      <tr><td>Patryk</td><td>0</td><td>4:10</td></tr>
     </table>
-    <div class="match">Gracz B1 1:1 Gracz B2</div>
-    <div class="match">Gracz B1 3:1 Gracz B3</div>
-    <div class="match">Gracz B2 2:0 Gracz B3</div>
+    <div class="match">Patryk 1:7 Kuba</div>
+    <div class="match">Filip 3:3 Patryk (F)</div>
+    <div class="match">Filip 0:8 Kuba</div>
 
     <!-- Grupa C -->
     <div class="group-title">Grupa C</div>
     <table>
       <tr><th>Zawodnik</th><th>Pkt</th><th>Bramki</th></tr>
-      <tr><td>Gracz C1</td><td>6</td><td>5:1</td></tr>
-      <tr><td>Gracz C2</td><td>3</td><td>2:3</td></tr>
-      <tr><td>Gracz C3</td><td>0</td><td>1:4</td></tr>
+      <tr><td>Filip A</td><td>3</td><td>6:2</td></tr>
+      <tr><td>Dekster</td><td>3</td><td>5:4</td></tr>
+      <tr><td>Igor N</td><td>3</td><td>3:8</td></tr>
     </table>
-    <div class="match">Gracz C1 2:0 Gracz C2</div>
-    <div class="match">Gracz C1 3:1 Gracz C3</div>
-    <div class="match">Gracz C2 2:1 Gracz C3</div>
+    <div class="match">Dekster 3:3 Igor (I)</div>
+    <div class="match">Igor 0:5 Filip</div>
+    <div class="match">Dekster 2:1 Filip</div>
 
     <!-- Grupa D -->
     <div class="group-title">Grupa D</div>
@@ -153,8 +153,8 @@
       <tr><td>Gracz D2</td><td>3</td><td>2:3</td></tr>
       <tr><td>Gracz D3</td><td>0</td><td>1:5</td></tr>
     </table>
-    <div class="match">Gracz D1 3:0 Gracz D2</div>
-    <div class="match">Gracz D1 3:1 Gracz D3</div>
+    <div class="match">Pluto 0:2 Ponio</div>
+    <div class="match"></div>
     <div class="match">Gracz D2 2:0 Gracz D3</div>
   </div>
 
