--- a/20250625_fifa.html
+++ b/20250625_fifa.html
@@ -149,13 +149,13 @@
     <div class="group-title">Grupa D</div>
     <table>
       <tr><th>Zawodnik</th><th>Pkt</th><th>Bramki</th></tr>
-      <tr><td>Gracz D1</td><td>6</td><td>6:1</td></tr>
-      <tr><td>Gracz D2</td><td>3</td><td>2:3</td></tr>
-      <tr><td>Gracz D3</td><td>0</td><td>1:5</td></tr>
+      <tr><td>Pluto</td><td>3</td><td>8:4</td></tr>
+      <tr><td>Leon N</td><td>3</td><td>7:8</td></tr>
+      <tr><td>Ponio</td><td>3</td><td>2:5</td></tr>
     </table>
     <div class="match">Pluto 0:2 Ponio</div>
-    <div class="match"></div>
-    <div class="match">Gracz D2 2:0 Gracz D3</div>
+    <div class="match">Leon 2:8 Pluto</div>
+    <div class="match">Ponio 0:5 Leon</div>
   </div>
 
   <!-- SEKCJA PLAY-OFF -->
@@ -163,15 +163,15 @@
     <div class="bracket">
 
       <div class="round"><strong>Ćwierćfinały</strong></div>
-      <div class="match"><span>Gracz A1</span> vs <span>Gracz B2</span></div>
-      <div class="match"><span>Gracz B1</span> vs <span>Gracz A2</span></div>
-      <div class="match"><span>Gracz C1</span> vs <span>Gracz D2</span></div>
-      <div class="match"><span>Gracz D1</span> vs <span>Gracz C2</span></div>
+      <div class="match"><span>Marcin D</span> 8:1 <span>Dekster</span></div>
+      <div class="match"><span>Kuba N</span> 3:5 <span>Leon N</span></div>
+      <div class="match"><span>Filip A</span> vs <span>Piotrek W</span></div>
+      <div class="match"><span>Filip C</span> vs <span>Pluto</span></div>
 
       <hr />
 
       <div class="round"><strong>Półfinały</strong></div>
-      <div class="match"><span>Zwycięzca 1</span> vs <span>Zwycięzca 2</span></div>
+      <div class="match"><span>Marcin D</span> vs <span>Leon</span></div>
       <div class="match"><span>Zwycięzca 3</span> vs <span>Zwycięzca 4</span></div>
 
       <hr />
@@ -181,16 +181,6 @@
 
     </div>
 
-    <hr />
-
-    <div class="round"><strong>Wyniki Play-Off</strong></div>
-    <div class="match">Gracz A1 2:1 Gracz B2</div>
-    <div class="match">Gracz B1 3:2 Gracz A2</div>
-    <div class="match">Gracz C1 1:0 Gracz D2</div>
-    <div class="match">Gracz D1 2:2 Gracz C2 (karne 4:3)</div>
-    <div class="match">Gracz A1 1:0 Gracz B1</div>
-    <div class="match">Gracz C1 2:1 Gracz D1</div>
-    <div class="match">Gracz A1 3:2 Gracz C1</div>
   </div>
 
   <script>
