--- a/20250625_fifa.html
+++ b/20250625_fifa.html
@@ -166,13 +166,18 @@
       <div class="match"><span>Marcin D</span> 8:1 <span>Dekster</span></div>
       <div class="match"><span>Kuba N</span> 3:5 <span>Leon N</span></div>
       <div class="match"><span>Filip A</span> 2:0 <span>Piotrek W</span></div>
-      <div class="match"><span>Filip C</span> vs <span>Pluto</span></div>
+      <div class="match"><span>Filip C</span> 1:3 <span>Pluto</span></div>
 
       <hr />
 
       <div class="round"><strong>Półfinały</strong></div>
       <div class="match"><span>Marcin D</span> vs <span>Leon</span></div>
-      <div class="match"><span>Filip A</span> vs <span>Zwycięzca 4</span></div>
+      <div class="match"><span>Filip A</span> vs <span>Pluto</span></div>
+
+      <hr />
+
+      <div class="round"><strong>O 3 Miejsce</strong></div>
+      <div class="match"><span>Przegrany Półfinału 1</span> vs <span>Przegrany Półfinału 2</span></div>
 
       <hr />
 
