--- a/20250625_fifa.html
+++ b/20250625_fifa.html
@@ -172,17 +172,17 @@
 
       <div class="round"><strong>Półfinały</strong></div>
       <div class="match"><span>Marcin D</span> 2:4 <span>Leon</span></div>
-      <div class="match"><span>Filip A</span> vs <span>Pluto</span></div>
+      <div class="match"><span>Filip A</span> 1:3 <span>Pluto</span></div>
 
       <hr />
 
       <div class="round"><strong>O 3 Miejsce</strong></div>
-      <div class="match"><span>Marcin</span> vs <span>Przegrany Półfinału 2</span></div>
+      <div class="match"><span>Marcin</span> vs <span>Filip A</span></div>
 
       <hr />
 
       <div class="round"><strong>Finał</strong></div>
-      <div class="match"><span>Leon</span> vs <span>Zwycięzca Półfinału 2</span></div>
+      <div class="match"><span>Leon</span> vs <span>Pluto</span></div>
 
     </div>
 
