--- a/20250625_fifa.html
+++ b/20250625_fifa.html
@@ -177,7 +177,7 @@
       <hr />
 
       <div class="round"><strong>O 3 Miejsce</strong></div>
-      <div class="match"><span>Marcin</span> vs <span>Filip A</span></div>
+      <div class="match"><span>Marcin</span> 2:3 <span>Filip A</span></div>
 
       <hr />
 
