--- a/20250625_fifa.html
+++ b/20250625_fifa.html
@@ -182,7 +182,7 @@
       <hr />
 
       <div class="round"><strong>Finał</strong></div>
-      <div class="match"><span>Leon</span> vs <span>Pluto</span></div>
+      <div class="match"><span>Leon</span> 3:2 <span>Pluto</span></div>
 
     </div>
 
