--- a/20250625_fifa.html
+++ b/20250625_fifa.html
@@ -112,50 +112,50 @@
     <!-- Grupa A -->
     <div class="group-title">Grupa A</div>
     <table>
-      <tr><th>Zawodnik</th><th>Pkt</th><th>Bramki</th></tr>
-      <tr><td>Marcin D</td><td>6</td><td>10:3</td></tr>
-      <tr><td>Piotrek W</td><td>3</td><td>5:5</td></tr>
-      <tr><td>Oliwier D</td><td>0</td><td>4:11</td></tr>
+      <tr><th>M</th><th>Zawodnik</th><th>Pkt</th><th>Bramki</th></tr>
+      <tr><td>1</td><td>Marcin D</td><td>6</td><td>10:3</td></tr>
+      <tr><td>2</td><td>Piotrek W</td><td>3</td><td>5:5</td></tr>
+      <tr><td>3</td><td>Oliwier D</td><td>0</td><td>4:11</td></tr>
     </table>
-    <div class="match">Piotrek 5:1 Oliwier</div>
-    <div class="match">Piotrek 0:4 Marcin</div>
-    <div class="match">Oliwier 3:6 Marcin</div>
+    <div class="match"><span>Piotrek</span> 5:1 <span>Oliwier</span></div>
+    <div class="match"><span>Piotrek</span> 0:4 <span>Marcin</span></div>
+    <div class="match"><span>Oliwier</span> 3:6 <span>Marcin</span></div>
 
     <!-- Grupa B -->
     <div class="group-title">Grupa B</div>
     <table>
-      <tr><th>Zawodnik</th><th>Pkt</th><th>Bramki</th></tr>
-      <tr><td>Kuba N</td><td>6</td><td>15:1</td></tr>
-      <tr><td>Filip C</td><td>3</td><td>3:11</td></tr>
-      <tr><td>Patryk</td><td>0</td><td>4:10</td></tr>
+      <tr><th>M</th><th>Zawodnik</th><th>Pkt</th><th>Bramki</th></tr>
+      <tr><td>1</td><td>Kuba N</td><td>6</td><td>15:1</td></tr>
+      <tr><td>2</td><td>Filip C</td><td>3</td><td>3:11</td></tr>
+      <tr><td>3</td><td>Patryk</td><td>0</td><td>4:10</td></tr>
     </table>
-    <div class="match">Patryk 1:7 Kuba</div>
-    <div class="match">Filip 3:3 Patryk (F)</div>
-    <div class="match">Filip 0:8 Kuba</div>
+    <div class="match"><span>Patryk</span> 1:7 <span>Kuba</span></div>
+    <div class="match"><span>Filip C</span> 3:3 <span>Patryk (F)</span></div>
+    <div class="match"><span>Filip C</span> 0:8 <span>Kuba</span></div>
 
     <!-- Grupa C -->
     <div class="group-title">Grupa C</div>
     <table>
-      <tr><th>Zawodnik</th><th>Pkt</th><th>Bramki</th></tr>
-      <tr><td>Filip A</td><td>3</td><td>6:2</td></tr>
-      <tr><td>Dekster</td><td>3</td><td>5:4</td></tr>
-      <tr><td>Igor N</td><td>3</td><td>3:8</td></tr>
+      <tr><th>M</th><th>Zawodnik</th><th>Pkt</th><th>Bramki</th></tr>
+      <tr><td>1</td><td>Filip A</td><td>3</td><td>6:2</td></tr>
+      <tr><td>2</td><td>Dekster</td><td>3</td><td>5:4</td></tr>
+      <tr><td>3</td><td>Igor N</td><td>3</td><td>3:8</td></tr>
     </table>
-    <div class="match">Dekster 3:3 Igor (I)</div>
-    <div class="match">Igor 0:5 Filip</div>
-    <div class="match">Dekster 2:1 Filip</div>
+    <div class="match"><span>Dekster</span> 3:3 <span>Igor (I)</span></div>
+    <div class="match"><span>Igor</span> 0:5 <span>Filip A</span></div>
+    <div class="match"><span>Dekster</span> 2:1 <span>Filip A</span></div>
 
     <!-- Grupa D -->
     <div class="group-title">Grupa D</div>
     <table>
-      <tr><th>Zawodnik</th><th>Pkt</th><th>Bramki</th></tr>
-      <tr><td>Pluto</td><td>3</td><td>8:4</td></tr>
-      <tr><td>Leon N</td><td>3</td><td>7:8</td></tr>
-      <tr><td>Ponio</td><td>3</td><td>2:5</td></tr>
+      <tr><th>M</th><th>Zawodnik</th><th>Pkt</th><th>Bramki</th></tr>
+      <tr><td>1</td><td>Pluto</td><td>3</td><td>8:4</td></tr>
+      <tr><td>2</td><td>Leon N</td><td>3</td><td>7:8</td></tr>
+      <tr><td>3</td><td>Ponio</td><td>3</td><td>2:5</td></tr>
     </table>
-    <div class="match">Pluto 0:2 Ponio</div>
-    <div class="match">Leon 2:8 Pluto</div>
-    <div class="match">Ponio 0:5 Leon</div>
+    <div class="match"><span>Pluto</span> 0:2 <span>Ponio</span></div>
+    <div class="match"><span>Leon</span> 2:8 <span>Pluto</span></div>
+    <div class="match"><span>Ponio</span> 0:5 <span>Leon</span></div>
   </div>
 
   <!-- SEKCJA PLAY-OFF -->
@@ -163,26 +163,26 @@
     <div class="bracket">
 
       <div class="round"><strong>Ćwierćfinały</strong></div>
-      <div class="match"><span>Marcin D</span> 8:1 <span>Dekster</span></div>
-      <div class="match"><span>Kuba N</span> 3:5 <span>Leon N</span></div>
-      <div class="match"><span>Filip A</span> 2:0 <span>Piotrek W</span></div>
-      <div class="match"><span>Filip C</span> 1:3 <span>Pluto</span></div>
+      <div class="match"><span><b>Marcin D</b></span> 8:1 <span>Dekster</span></div>
+      <div class="match"><span>Kuba N</span> 3:5 <span><b>Leon N</b></span></div>
+      <div class="match"><span><b>Filip A</b></span> 2:0 <span>Piotrek W</span></div>
+      <div class="match"><span>Filip C</span> 1:3 <span><b>Pluto</b></span></div>
 
       <hr />
 
       <div class="round"><strong>Półfinały</strong></div>
-      <div class="match"><span>Marcin D</span> 2:4 <span>Leon</span></div>
-      <div class="match"><span>Filip A</span> 1:3 <span>Pluto</span></div>
+      <div class="match"><span>Marcin D</span> 2:4 <span><b>Leon</b></span></div>
+      <div class="match"><span>Filip A</span> 1:3 <span><b>Pluto</b></span></div>
 
       <hr />
 
       <div class="round"><strong>O 3 Miejsce</strong></div>
-      <div class="match"><span>Marcin</span> 2:3 <span>Filip A</span></div>
+      <div class="match"><span>Marcin</span> 2:3 <span><b>Filip A</b></span></div>
 
       <hr />
 
       <div class="round"><strong>Finał</strong></div>
-      <div class="match"><span>Leon</span> 3:2 <span>Pluto</span></div>
+      <div class="match"><span><b>Leon</b></span> 3:2 <span>Pluto</span></div>
 
     </div>
 
